--- a/caseTracker.ipynb
+++ b/caseTracker.ipynb
@@ -6,7 +6,7 @@
       "name": "caseTracker.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNYlFRpKHluR9Fa0JgkxqC0",
+      "authorship_tag": "ABX9TyPj+wUjMWKBVAZAmFb8RSwE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,17 +77,17 @@
         "distinctCases = pd.DataFrame(distinctCases.iloc[:,0].unique())\n",
         "distinctCases.index = distinctCases.index + 1\n",
         "distinctCases.to_csv('/distinctCases.csv', header=False)\n",
-        "print('Distinct cases: ' + str(distinctCases.iloc[:, 0].unique().size))\n",
+        "print('/distinctCases.csv')\n",
         "\n",
         "tracersPathways = tracersPathways.iloc[:, 0]\n",
         "tracersPathways.index = tracersPathways.index + 1\n",
         "pd.DataFrame(tracersPathways).to_csv('/tracersPathways.csv', header=False)\n",
-        "print('Total pathways: ' + str(tracersPathways.size))\n",
+        "print('/tracersPathways.csv')\n",
         "\n",
         "pd.DataFrame(actualInjections.iloc[:, 0]).to_csv('/actualInjections.csv')\n",
-        "print('Total injections: ' + str(actualInjections.size))"
+        "print('/actualInjections.csv')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
